--- a/Menu_Template_Example_with_MySQL.ipynb
+++ b/Menu_Template_Example_with_MySQL.ipynb
@@ -49,7 +49,10 @@
         "import pymysql\n",
         "from sqlalchemy import create_engine\n",
         "\n",
-        "cnx = create_engine('mysql+pymysql://root:Matt@HK2022@127.0.0.1/sys')"
+        "# Enter your MySQL password to run this program\n",
+        "password = \"xxx\"\n",
+        "\n",
+        "cnx = create_engine(f'mysql+pymysql://root:{password}@127.0.0.1/sys')"
       ],
       "metadata": {
         "id": "I0bGu4lwn2vs"
